--- a/experiments/bert/requirements.txt
+++ b/experiments/bert/requirements.txt
@@ -6,5 +6,6 @@ transformers==4.18.0
 pytorch-lightning==1.5.10
 wandb==0.12.14
 rich==12.2.0
-smart-pytorch==0.0.2
+smart-pytorch==0.0.3
 argparse==1.4.0
+vat-pytorch==0.0.3
