--- a/hp_swap.yaml
+++ b/hp_swap.yaml
@@ -5,19 +5,19 @@ metric:
   name: valid_loss
 parameters:
   lr:
-    values: [1e-5, 3e-5, 1e-4]
+    values: [2e-6, 5e-6, 1e-5]
   batch-size:
     value: 16
   vat-loss-weight:
-    values: [0.5, 1, 2]
+    values: [0.1, 0.2, 0.5, 1, 2]
   vat-loss-radius: 
-    values: [0.05, 0.1, 0.3, 0.5,1,2]
+    values: [0.02, 0.05, 0.1, 0.3]
   step-size:
-    values: [2e-4, 5e-4, 1e-3, 2e-3]
+    values: [1e-4, 2e-4, 5e-4]
   epsilon:
-    values: [5e-7, 1e-6, 2e-6, 5e-6, 1e-5]
+    values: [2e-7, 5e-7, 1e-6, 2e-6, 5e-6]
   noise-var:
-    values: [5e-6, 1e-5, 2e-5, 5e-5, 1e-4]
+    values: [1e-5, 2e-5, 5e-5, 1e-4, 2e-4, 5e-4]
 early_terminate:
   type: hyperband
   s: 2
