prepare 3rd round ALICE sweep

--- a/hp_sweep_alice.yaml
+++ b/hp_sweep_alice.yaml
@@ -2,24 +2,20 @@ program: vat_hp_tune.py
 method: random
 metric:
   goal: minimize
-  name: valid_loss
+  name: val_Accuracy_epoch
 parameters:
   lr:
-    values: [5e-6, 1e-5, 2e-5, 5e-5]
-  acc-grad:
-    values: [1,2,4,8]
-  acc-grad-schedule:
-    values: ["none", "increasing", "decreasing"]
+    values: [5e-6, 1e-5]
   vat-loss-weight:
-    values: [0.1, 0.2, 0.5, 1, 2]
+    values: [0.5, 1]
   vat-loss-radius: 
-    values: [0.02, 0.05, 0.1, 0.3]
+    values: [0.05, 0.1, 0.3]
   step-size:
-    values: [1e-4, 2e-4, 5e-4]
+    values: [1e-4, 2e-4]
   epsilon:
-    values: [2e-7, 5e-7, 1e-6, 2e-6, 5e-6]
+    values: [1e-6, 2e-6, 5e-6]
   noise-var:
-    values: [1e-5, 2e-5, 5e-5, 1e-4, 2e-4, 5e-4]
+    values: [5e-6, 1e-5, 2e-5]
 early_terminate:
   type: hyperband
   s: 2
