prepare 2nd ALICE++ sweep

--- a/hp_sweep_alicepp.yaml
+++ b/hp_sweep_alicepp.yaml
@@ -1,5 +1,5 @@
 program: vat_hp_tune.py
-method: random
+method: bayes
 metric:
   goal: minimize
   name: val_Accuracy_epoch
@@ -9,19 +9,19 @@ parameters:
   precision:
     value: 16
   lr:
-    values: [5e-6, 1e-5, 2e-5, 5e-5]
+    values: [2e-6, 5e-6]
   vat-loss-weight:
-    values: [0.1, 0.2, 0.5, 1, 2]
+    values: [0.1, 0.2, 0.5, 1]
   vat-loss-radius: 
-    values: [0.05, 0.1, 0.3, 0.5]
+    values: [0.05, 0.1, 0.3]
   step-size:
-    values: [1e-4, 5e-4, 1e-3]
+    values: [1e-4, 5e-4]
   epsilon:
     values: [1e-7, 5e-7, 1e-6, 5e-6]
   noise-var:
-    values: [1e-5, 2e-5, 5e-5, 1e-4, 2e-4, 5e-4]
+    values: [1e-5, 2e-5, 5e-5, 1e-4, 2e-4]
 early_terminate:
   type: hyperband
   s: 2
   eta: 3
-  max_iter: 20
+  max_iter: 25
