quickfix: americans have weird spelling

--- a/hp_sweep_alicepp.yaml
+++ b/hp_sweep_alicepp.yaml
@@ -1,7 +1,7 @@
 program: vat_hp_tune.py
 method: bayes
 metric:
-  goal: maximise
+  goal: maximize
   name: val_Accuracy_epoch
 parameters:
   vat:
