prepare 3rd A++ sweep

--- a/hp_sweep_alicepp.yaml
+++ b/hp_sweep_alicepp.yaml
@@ -1,5 +1,5 @@
 program: vat_hp_tune.py
-method: bayes
+method: random
 metric:
   goal: maximize
   name: val_Accuracy_epoch
@@ -11,15 +11,15 @@ parameters:
   lr:
     value: 5e-6
   vat-loss-weight:
-    values: [0.1, 0.2, 0.5, 1]
+    values: [0.1, 0.2, 0.5]
   vat-loss-radius: 
     values: [0.05, 0.1, 0.3]
   step-size:
     values: [1e-4, 5e-4]
   epsilon:
-    values: [1e-7, 5e-7, 1e-6, 5e-6]
+    values: [5e-7, 1e-6, 5e-6, 1e-5]
   noise-var:
-    values: [1e-5, 2e-5, 5e-5, 1e-4, 2e-4]
+    values: [1e-5, 2e-5, 5e-5, 1e-4]
 early_terminate:
   type: hyperband
   s: 2
