--- a/hp_sweep_alicepp.yaml
+++ b/hp_sweep_alicepp.yaml
@@ -11,12 +11,12 @@ parameters:
   lr:
     value: 5e-6
   vat-loss-weight:
-    values: [0.1, 0.2, 0.5]
+    value: 0.5
   vat-loss-radius: 
-    values: [0.05, 0.1, 0.3]
+    values: [1e-5, 0.05, 0.3]
   step-size:
-    values: [1e-4, 5e-4]
+    value: 5e-4
   epsilon:
-    values: [5e-7, 1e-6, 5e-6, 1e-5]
+    values: [5e-6, 1e-5, 2e-5, 5e-5]
   noise-var:
-    values: [5e-5, 1e-4]
+    value: 5e-5
