--- a/hp_sweep_alicepp.yaml
+++ b/hp_sweep_alicepp.yaml
@@ -17,7 +17,7 @@ parameters:
   vat-loss-weight:
     value: 0.5
   vat-loss-radius: 
-    values: 0.05
+    value: 0.05
   step-size:
     value: 5e-4
   epsilon:
