--- a/hp_sweep_alicepp.yaml
+++ b/hp_sweep_alicepp.yaml
@@ -9,11 +9,11 @@ parameters:
   precision:
     value: 16
   acc-grad:
-    values: [2,4,8]
-  acc-grad-schedule:
-    values: ["none", "decreasing", "increasing"]
+    value: 4
+  max-layer:
+    values: [0,1,2,3,4,5,6,7,8,9,10,11]
   lr:
-    values: [5e-6, 1e-5, 2e-5]
+    value: 1e-5
   vat-loss-weight:
     value: 0.5
   vat-loss-radius: 
