--- a/hp_sweep_smart.yaml
+++ b/hp_sweep_smart.yaml
@@ -6,19 +6,21 @@ metric:
 parameters:
   vat:
     value: "SMART"
+  dataset:
+    value: timeml
   batch-size:
     value: 16
   lr:
-    value: 5e-6
+    value: [5e-6, 1e-5]
   precision:
     value: 16
   vat-loss-weight:
-    value: 0.5
+    values: [0.1, 0.5, 1]
   vat-loss-radius: 
-    value: 0.05
+    values: [0.05, 0.1, 0.5, 1]
   step-size:
-    value: 1e-3
+    values: [5e-4, 1e-3, 2e-3]
   epsilon:
-    value: 1e-6
+    values: [1e-6, 5e-6, 1e-5, 5e-5]
   noise-var:
-    value: 1e-5
+    values: [5e-6, 1e-5, 2e-5]
