--- a/hp_sweep_smart.yaml
+++ b/hp_sweep_smart.yaml
@@ -11,7 +11,7 @@ parameters:
   batch-size:
     value: 16
   lr:
-    value: [5e-6, 1e-5]
+    values: [5e-6, 1e-5]
   precision:
     value: 16
   vat-loss-weight:
