prepare 2nd sweep TimeML Smart

--- a/hp_sweep_smart.yaml
+++ b/hp_sweep_smart.yaml
@@ -11,16 +11,16 @@ parameters:
   batch-size:
     value: 16
   lr:
-    values: [5e-6, 1e-5]
+    value: 5e-6
   precision:
     value: 16
   vat-loss-weight:
-    values: [0.1, 0.5, 1]
+    value: 0.5
   vat-loss-radius: 
     values: [0.05, 0.1, 0.5, 1]
   step-size:
-    values: [5e-4, 1e-3, 2e-3]
+    value: 2e-3
   epsilon:
-    values: [1e-6, 5e-6, 1e-5, 5e-5]
+    values: [5e-6, 1e-5]
   noise-var:
     values: [5e-6, 1e-5, 2e-5]
