prepare sweeps: max-layer Alice++ and test Alice

--- a/hp_sweep_alice.yaml
+++ b/hp_sweep_alice.yaml
@@ -8,6 +8,8 @@ parameters:
     value: "ALICE"
   dataset:
     value: timeml
+  train-mode:
+    value: test
   batch-size:
     value: 16
   precision:
@@ -17,12 +19,12 @@ parameters:
   lr:
     value: 5e-6
   vat-loss-weight:
-    values: [0.1, 0.5] 
+    value: 0.5 
   vat-loss-radius: 
-    values: [0.05, 0.1, 0.3]
+    value: 0.1
   step-size:
     value: 1e-3
   epsilon:
-    values: [1e-6, 1e-5, 1e-4]
+    value: 1e-6
   noise-var:
-    values: [2e-5, 5e-5]
+    value: 2e-5
