--- a/hp_sweep_alicepp.yaml
+++ b/hp_sweep_alicepp.yaml
@@ -14,15 +14,17 @@ parameters:
     value: 16
   seed:
     values: [0,1,2,3,4]
+  max-layer:
+    values: [1,2,3,4,5,6,7,8,9,10,11,12]
   lr:
-    values: [5e-6, 1e-5]
+    value: 1e-5
   vat-loss-weight:
-    values: [0.1, 0.3]
+    values: 0.3
   vat-loss-radius: 
-    values: [0.1, 0.5, 1]
+    value: 1
   step-size:
-    values: [1e-3, 2e-3]
+    value: 2e-3
   epsilon:
     value: 1e-5
   noise-var:
-    values: [1e-5, 2e-5]
+    value: 2e-5
