--- a/final_alice_mctaco.yaml
+++ b/final_alice_mctaco.yaml
@@ -4,27 +4,27 @@ metric:
   goal: maximize
   name: val_Accuracy_epoch
 parameters:
+  train-mode:
+    value: test
   vat:
-    value: "SMART"
-  batch-size:
-    value: 16
+    value: "ALICE"
   precision:
     value: 16
-  acc-grad:
-    values: [1,2,4,8]
-  acc-grad-schedule:
-    values: ["none", "decreasing", "increasing"]
   lr:
-     values: [5e-6, 1e-5]
+    value: 1e-5
+  acc-grad:
+    value: 8
+  acc-grad-schedule:
+    value: "decreasing"
   vat-loss-weight:
     value: 0.5
   vat-loss-radius: 
     value: 0.05
   step-size:
-    value: 1e-3
+    value: 1e-4
   epsilon:
-    value: 1e-6
+    value: 2e-6
   noise-var:
-    value: 1e-5
+    value: 5e-6
   seed:
-    values: [0,1,2,3,4]
+    values: [0,1,2,3,4,5,6,7,8,9]
