mctaco: final smart and baseline acc-grad

--- a/hp_sweep_baseline.yaml
+++ b/hp_sweep_baseline.yaml
@@ -9,8 +9,12 @@ parameters:
   batch-size:
     value: 16
   lr:
-    values: [5e-6, 1e-5, 2e-5]
+    values: [2e-5, 5e-5]
   precision:
     value: 16
+  acc-grad:
+    values: [1,2,4,8]
+  acc-grad-schedule:
+    values: ["none", "decreasing", "increasing"]
   seed:
     values: [0,1,2,3,4]
