add missing yaml files

--- a/final_smart_timeml.yaml
+++ b/final_smart_timeml.yaml
@@ -6,25 +6,25 @@ metric:
 parameters:
   vat:
     value: "SMART"
+  dataset:
+    value: timeml
+  train-mode:
+    value: test
   batch-size:
     value: 16
   precision:
     value: 16
-  acc-grad:
-    values: [1,2,4,8]
-  acc-grad-schedule:
-    values: ["none", "decreasing", "increasing"]
-  lr:
-     values: [5e-6, 1e-5]
-  vat-loss-weight:
-    value: 0.5
-  vat-loss-radius: 
-    value: 0.05
-  step-size:
-    value: 1e-3
-  epsilon:
-    value: 1e-6
-  noise-var:
-    value: 1e-5
   seed:
-    values: [0,1,2,3,4]
+    values: [0,1,2,3,4,5,6,7,8,9]
+  lr:
+    value: 5e-6
+  vat-loss-weight:
+    value: 0.5 
+  vat-loss-radius: 
+    value: 0.5
+  step-size:
+    value: 2e-3
+  epsilon:
+    value: 5e-6
+  noise-var:
+    value: 2e-5
